# Shipyard

./: .earthlyignore  .gitignore  AGENTS.md  Earthfile  Earthfile.dev  Gemfile  README.md  _config.yml  dagger.py  index.md  plan.md  pyproject.toml  requirements.txt  setup.py
_includes/: mermaid_config.js
_sass/custom/: setup.scss
docs/: Building.md  CodePatch.md  Installation.md  Shipfile.md  building.md  code-patch.md  getting-started.md  shipfile.md  troubleshooting.md
examples/: shipyard.py
examples/proftpd/: shipfile.py
shipyard/: __init__.py  build.py  cli.py  code_file.py  codepatch.py  custompatch.py  dagger.py  dagger_mgr.py  ez.py  generator.py  git.py  jumpstart.py  patch.py  patches.py  sources.py  utils.py  version.py
shipyard/drivers/: arch.py  base.py  debian.py  rpm.py
shipyard/engines/: dagger.py
